traces/bug_513.txt
examples++-load/Curvature.cpp:539: error: DEAD_STORE
  The value written to &nv (type int) is never used.
Showing all 1 steps of the trace


examples++-load/Curvature.cpp:539:5: Write of unused value
537.       double l[3];
538.       double m[3]={arr,arz,azz};
539.       int nv=eigen2(m,l,vp);
           ^
540.       l[2]=att;
541.       
